# zenstore-backend

./: .env  Cargo.toml  diesel.toml
migrations/2024-07-06-201942_create_products/: up.sql
src/: main.rs  schema.rs
src/config/: database.rs
src/handlers/: product.rs
src/models/: mod.rs  product.rs
src/routes/: api.rs
