[package]
name = "zenstore-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.0", features = ["mysql", "r2d2", "chrono"] }
dotenv = "0.15"
r2d2 = "0.8"
chrono = { version = "0.4.11", feaures = ["serde"] }